@@ -2,6 +2,7 @@ src/*.o
 src/*.mo
 src/dnsmasq.pot
 src/dnsmasq
+src/dnsmasq_baseline
 src/.configured
 contrib/wrt/dhcp_lease_time
 contrib/wrt/dhcp_release
